--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
     <meta name="Designer" content="Milad Pourvali Andarabi">
     <meta name="Designer" content="میلاد پورولی اندرابی">
     <title>GameShop</title>
-    <link rel="icon" type="image/x-icon" href="images/favicon.ico">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/all.min.css">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+    <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./css/all.min.css">
+    <link rel="stylesheet" href="./css/main.css">
   </head>
   <body>
 
@@ -76,19 +76,19 @@
         <!-- Wrapper for slides -->
         <div class="carousel-inner" role="listbox">
           <div class="item active">
-            <img src="images/banner1.jpg" alt="fifa 23">
+            <img src="./images/banner1.jpg" alt="fifa 23">
             <div class="carousel-caption">
               <img src="images/sticker.png" alt="coming soon">
             </div>
           </div>
           <div class="item">
-            <img src="images/banner2.jpg" alt="red dead redemption 2">
+            <img src="./images/banner2.jpg" alt="red dead redemption 2">
             <div class="carousel-caption">
               <img src="images/sticker.png" alt="coming soon">
             </div>
           </div>
           <div class="item">
-            <img src="images/banner3.jpg" alt="forza horizon 3">
+            <img src="./images/banner3.jpg" alt="forza horizon 3">
             <div class="carousel-caption">
               <img src="images/sticker.png" alt="coming soon">
             </div>
@@ -315,11 +315,11 @@
 
 <!-- SCRIPTS -->
 
-    <script src="js/jquery-1.12.4.min"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/all.min.js"></script>
-    <script src="js/data.js"></script>
-    <script src="js/app.js"></script>
+    <script src="./js/jquery-1.12.4.min"></script>
+    <script src="./js/bootstrap.min.js"></script>
+    <script src="./js/all.min.js"></script>
+    <script src="./js/data.js"></script>
+    <script src="./js/app.js"></script>
     
   </body>
 </html>
